Avoid collapsing drag handle

--- a/app/assets/stylesheets/arrangement.css
+++ b/app/assets/stylesheets/arrangement.css
@@ -67,6 +67,7 @@
 
 .btn:is(.arrangement__handle) {
   display: none;
+  flex-shrink: 0;
 }
 
 .arrangement-selected {
